# Content-Moderation-Thesis

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: animetimm.yaml  animetimm_trained.yaml  camie.yaml  clip_multilabel.yaml  dinov3_vitl16_dinotxt.yaml  florence2_large.yaml  hysac.yaml  siglip2_so400m.yaml  siglip_lp.yaml  siglip_so400m.yaml  wd_eva02_tagger.yaml  wdevatagger_trained.yaml
configs/eval/: animetimm.yaml  animetimm_trained.yaml  camie.yaml  clip_lp.yaml  clip_multilabel.yaml  clip_vitl14.yaml  dinov3_vitl16_dinotxt.yaml  florence2_large.yaml  hysac.yaml  siglip2_so400m.yaml  siglip_so400m.yaml  wd_eva02_tagger.yaml  wdevatagger_trained.yaml
configs/train/: sample_head.yaml
outputs/internal/: camie_internal.json  clip_vitl14_internal.json  dinov3_vitl16_internal.json  hysac_internal.json  siglip2_so400m_internal.json  siglip_so400m_internal.json  wd_eva02_tagger_internal.json
outputs/lspd/: animetimm_lspd_normal.json  camie_lspd_normal.json  clip_lp_lspd_anime.json  clip_lp_lspd_normal.json  clip_vitl14_lspd_anime.json  dinov3_vitl16_lspd_normal.json  hysac_lspd_anime.json  hysac_lspd_normal.json  siglip_lp_lspd_anime.json  siglip_so400m_lspd_anime.json  siglip_so400m_lspd_normal.json
outputs/nudenet/: animetimm_multilabel_and_selectedtags_trained_nudenet.json  camie_nudenet.json  clip_linearprobe_nudenet.json  clip_multilabel0_nudenet.json  clip_multilabel1_trained_nudenet.json  (+6 more)
scripts/: eval.py  probe.py  train.py
src/data/: lspd.py  (+4 more)
weights/: animetimm.pt  clip_multilabel.pt  clip_nudenet_lp.npz  siglip_nudenet_lp.npz  wdeva02.pt
(+127 files in other folders)
